fix http to https

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -5,7 +5,7 @@
             integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4="
             crossorigin="anonymous"></script>
         <script src='https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js'></script>
-        <link rel="stylesheet" href="http://www.keybr.com/res/css/practice__202d9c017ff750bbf052cbb4650b22b4.css">
+        <link rel="stylesheet" href="https://www.keybr.com/res/css/practice__202d9c017ff750bbf052cbb4650b22b4.css">
     </head>
     <body>
         <center>
